Fix viewport overflow?

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,6 @@ code {
   @apply bg-base-100/50 rounded-field px-2;
 }
 
-body {
-  @apply w-[100vw] overflow-x-hidden;
+body > div {
+  @apply overflow-x-hidden;
 }
